# blackwell-gb10-sm121-native-pytorch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bench/: _clocklock.sh  _harness.py  _solar.py  _summarize.py  bench_full.py  cleanup_volumes.sh  fa4_bench.py  kernel_bench.py  normalize.py  roofline.py  run_bakeoff.sh  run_tiers.py  sol_config.toml  tests_attn_fa4.py  tests_gemm_llm.py  tests_kernels.py  tests_triton_autotune.py  verify_clocklock.sh
bench/configs/optimum/: _base_.yaml
bench/configs/optimum/recommended/: llama3_8b_bf16.yaml  mixtral_8x7b_int8.yaml  qwen3_30b_a3b_int8.yaml
bench/configs/optimum/wide/: _base_.yaml  deepseek_v2_lite_int8.yaml  llama3_70b_fp8.yaml  llama3_8b_bf16.yaml  mixtral_8x7b_int8.yaml  qwen3_30b_a3b_int8.yaml
bench/e2e/: build_flashinfer.sh  mlperf_llama31_8b.py  run_e2e.sh  serve_flashinfer.py
bench/experimental/: build_flashinfer.sh  mlperf_llama31_8b.py  run_e2e.sh  serve_flashinfer.py
bench/nvbench_shim/: CMakeLists.txt  build_nvbench.sh  run_nvbench.py  sm121_gemm.cu
docs/: benchmark-methodology.md  containerization.md  findings.md  sol-score.md
gb10-explore/: pyproject.toml
gb10-explore/definitions/: llama31_8b_attn_out_m512_bf16.json  llama31_8b_attn_out_m512_fp16.json  llama31_8b_attn_out_m512_fp4.json  llama31_8b_attn_out_m512_fp8.json  llama31_8b_mlp_down_m512_bf16.json  llama31_8b_mlp_down_m512_fp16.json  llama31_8b_mlp_down_m512_fp4.json  llama31_8b_mlp_down_m512_fp8.json  llama31_8b_mlp_up_m512_bf16.json  llama31_8b_mlp_up_m512_fp16.json  llama31_8b_mlp_up_m512_fp4.json  llama31_8b_mlp_up_m512_fp8.json  llama31_8b_qkv_proj_m512_bf16.json  llama31_8b_qkv_proj_m512_fp16.json  llama31_8b_qkv_proj_m512_fp4.json  llama31_8b_qkv_proj_m512_fp8.json
gb10-explore/explore/: bench.py  ncu.py  trace.py
gb10-explore/explore/compile/: __init__.py  registry.py  runnable.py
gb10-explore/explore/data/: __init__.py  definition.py  utils.py  workload.py
gb10-explore/explore/runner/: _solution_runner.py
gb10-explore/kernels/seed/: seed_gemm_fp4.py  seed_gemm_fp8.py
gb10-tune/: pyproject.toml  run_tune.sh
gb10-tune/_exp_runs/: configC_v2.err  configC_v2.json  configD.err  configD.json  inv2_rmsnorm_configC.err  inv2_rmsnorm_configC.json
gb10-tune/_exp_runs/fused_add_rmsnorm_h4096/candidates/: iter_0.py  iter_1.py  iter_2.py  iter_3.py  iter_4.py  iter_5.py  iter_6.py
gb10-tune/_exp_runs/llama31_8b_qkv_proj_m512_bf16/candidates/: iter_11.py  iter_15.py  iter_20.py  iter_5.py
gb10-tune/definitions/: fused_add_rmsnorm_h4096.json  llama31_8b_qkv_proj_m512_bf16.json  reduction_sum_16m_fp32.json
gb10-tune/definitions/workloads/fused_add_rmsnorm_h4096/: wl01.json  wl02.json  wl03.json  wl04.json  wl05.json  wl06.json  wl07.json  wl08.json  wl09.json  wl10.json
gb10-tune/definitions/workloads/llama31_8b_qkv_proj_m512_bf16/: wl01.json  wl02.json  wl03.json  wl04.json  wl05.json  wl06.json  wl07.json  wl08.json  wl09.json  wl10.json
gb10-tune/definitions/workloads/reduction_sum_16m_fp32/: wl01.json  wl02.json  wl03.json  wl04.json  wl05.json  wl06.json  wl07.json  wl08.json  wl09.json  wl10.json
gb10-tune/kernels/baselines/: gemm_baseline.py  reduction_baseline.py  rmsnorm_baseline.py
gb10-tune/tune/: agent.py  attempt_memory.py  bench.py  bottleneck.py  correctness.py  diagnostic.py  fast_p.py  loop_helpers.py  ncu.py  peak.py  playbook_sm121a.md  stage1.py  stage2.py  swarm.py  trace.py  tune.py  validators.py
gb10-tune/tune/_recursivemas/: __init__.py
gb10-tune/tune/compile/: registry.py
gb10-tune/tune/data/: __init__.py  definition.py  json_utils.py  solution.py  trace.py
gb10-tune/tune/runner/: _solution_runner.py
gb10-tune/tune/templates/: __init__.py  base.py  gemm.py  reduction.py  registry.py
