[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgx-spark-bench"
version = "0.2.0"
description = "DGX Spark (GB10 / sm_121) reproducible bake-off: NCU roofline + optimum-benchmark + FlashAttention-4"
requires-python = ">=3.11"
# Single source of truth for container installs. The host does not install
# these — bench/run_bakeoff.sh bind-mounts this file read-only and replays
# the pins via `uv pip install --system` inside each docker container.
dependencies = [
    "torch>=2.10",
    "optimum-benchmark==0.6.0",
    "ncu-report==2025.3.1",
    "transformers>=4.55,<5.0",
    "accelerate>=1.0",
    "bitsandbytes==0.49.2",
    "triton>=3.6",
    "hf-transfer",
]

[tool.setuptools]
packages = []   # bench/ is run as scripts, not installed
