[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gb10-explore"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "torch",
  "triton==3.7.0",
  "pydantic>=2",
  "httpx",
  "openai>=1.30",
  "transformers",
  "ncu_report==2025.3.1",
  "numpy",
]

[project.scripts]
explore-bench = "explore.bench:main"
explore-run-agent = "explore.run_agent:main"
explore-e2e-compare = "explore.e2e_compare:main"

[tool.setuptools.packages.find]
include = ["explore*"]
