[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tune"
version = "0.1.0"
requires-python = ">=3.12"
# Every runtime dependency listed explicitly so imports never need availability guards.
# torch is force-reinstalled from the native sm_121 /work wheel (no version pin).
dependencies = [
  "torch",
  "triton==3.7.0",
  "pydantic>=2",
  "transformers>=5.9",      # qwen3_5_text arch needs >=5.9
  "accelerate>=1.0",        # transformers model loading
  "safetensors",            # SafetensorsInput workloads
  "huggingface_hub>=0.24",  # snapshot_download of cached checkpoints
]

[project.scripts]
tune-run = "tune.tune:main"

[tool.setuptools.packages.find]
include = ["tune*"]
